refractor(all): reset code to css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<div class="thumbnails-filter">
+<!DOCTYPE html>
+<html>
+
+<head>
+
+  <meta charset="UTF-8">
+
+  <title>CodePen - Filter Concept #2</title>
+
+  <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+
+</head>
+
+<body>
+
+  <div class="thumbnails-filter">
   <select id="filter">
   <option value="all"> Filter By:</option>
   <option value="all">All</option>
@@ -30,23 +47,27 @@
 <a href="#" class="tumb city">
     <img data-src="http://38.media.tumblr.com/0ce0bc9816f51963af73c7fdf7757d23/tumblr_na0k70npJI1st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Siddharth Kothari" /></a>
 
-
 <a href="#" class="tumb city">
     <img data-src="http://38.media.tumblr.com/2741d3e79ea3782f87c65c1e44b5f9fa/tumblr_na0kb0BLqR1st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Siddharth Kothari" /></a>
 
-
 <a href="#" class="tumb beach">
     <img data-src="http://31.media.tumblr.com/e7ac48834604ac8e9aaf4a3c106c4e86/tumblr_n9hxd1c4Y81st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Cole Patrick" /></a>
-
 
 <a href="#" class="tumb clouds">
     <img data-src="http://37.media.tumblr.com/bddaeb8fe12eda6bb40cf6a0a18d9efa/tumblr_n8zm8ndGiY1st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Austin Ban" /></a>
 
 </div>
 
-
 <div class="thumbnails-preview">
   <a href="#" class="thumbnail-close">&times;</a>
   <div class="thumbnail-title"></div>
   <div class="thumbnail-content"></div>
 </div>
+
+  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+
+  <script src="js/index.js"></script>
+
+</body>
+
+</html>
