refactor(css): fixing img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="thumbnails-filter">
+<div class="thumbnails-filter">
   <select id="filter">
   <option value="all"> Filter By:</option>
   <option value="all">All</option>
@@ -29,7 +29,8 @@
 
 <div class="thumbnails">
 <a href="#" class="tumb bridge">
-    <img data-src="http://38.media.tumblr.com/222f39f4520d55100feff7237861b373/tumblr_n8gxs0oWZ21st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Chris Brignola" /></a>
+    <img src="images/canada/bike-race.jpg" alt="Bike Race" />
+</a>
 
 <a href="#" class="tumb montain">
     <img data-src="http://38.media.tumblr.com/9cca3d64c075b55c0a96303174d66b19/tumblr_na0l33ez3W1st5lhmo1_1280.jpg" src="https://dl.dropboxusercontent.com/u/23834858/fotos/1px.png" alt="Lukasz Szmigiel" /></a>
