feature(html): add code pen comment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 </head>
 
+
+<!-- This is the ui design from codepen that inspired me http://codepen.io/nakome/pen/GgMQaa-->
+    
     
 <header>
     <h1>Photography of Our Travels</h1> 
