feat(html): change a bit of type

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 
